2004-07-02  Dossy Shiobara <dossy@panoptic.com>

	* nsd/mimetypes.c (1.11.2.1): Ns_GetMimeType() was returning
	  defaultType instead of noextType if the path contained a
	  directory with a "." but the filename component had no extension.
	  Fixes bug #739049.  Backported from HEAD.

2004-07-02  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: fastpath.c (1.18.2.1), return.c (1.33.2.4): Enable ADP/Tcl
	  code to override Last-Modified: header from ns_respond when
	  -headers AND -file are specified.  Closes bug #879076.  Backport
	  from HEAD, for 4.0.6.

2004-07-02  Dossy Shiobara <dossy@panoptic.com>

	* nsd/tclresp.c (1.16.2.1): lots of refactoring of ns_respond code
	  to remove duplication.  Backport from HEAD.

2004-07-02  Dossy Shiobara <dossy@panoptic.com>

	* nsd/init.tcl (1.30.2.1): ns_eval of script containing comments
	  (i.e., lines starting with "#") cause an error because $args is a
	  list, which gets evaluated differently than a plain string
	  script.  Fixes bug #833940.  Backported from HEAD.

2004-07-01  Dossy Shiobara <dossy@panoptic.com>

	* nsd/: nsd.h (1.77.2.5), nsmain.c (1.52.2.1): Ensure that
	  supplementary groups from /etc/group are set if -u username is
	  specified, or dropped if a uid is specified so that the nsd
	  doesn't run with root's supplementary groups.  Closes bug
	  #425401.  Backport from HEAD.

2004-07-01  Dossy Shiobara <dossy@panoptic.com>

	* nsd/nsd.h (1.77.2.4): trivial - eliminate compiler warning for
	  nsd/nsmain.c

2004-07-01  Dossy Shiobara <dossy@panoptic.com>

	* nsthread/tls.c (1.2.2.1): Make the Tcl_Panic() message from
	  Ns_TlsGet() and Ns_TlsSet() include the full function name to aid
	  in debugging.  (Backport from HEAD.)

2004-06-30 17:20  Dossy Shiobara <dossy@panoptic.com>

	* nsd/unix.c: Ensure synchronous signals are handled correctly
	  under LinuxThreads.  Possible fix for Bug #982955.

	  Backported from HEAD for 4.0.6.

2004-06-30 01:24  Dossy Shiobara <dossy@panoptic.com>
